# raze-cli

./: .gitignore  README.md  graph.json  plan.json  pyproject.toml  summaries.json
demo_data/: report_q1.txt
raze.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
raze_app/: ui.py
raze_cli/: autocat.py  dedupe.py  extract.py  graph.py  ingest.py  main.py  phash.py  pipeline.py  plan_apply.py  reasoner_oss.py  reasoner_stub.py  simhash.py  summarize.py
scripts/: run_demo.sh
viewer/: index.html  viewer.css  viewer.js
